# OrangeRL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
orangerl/base/: __init__.py  agent.py  common.py  data.py  datas.py
orangerl/data/: __init__.py  replay_buffer.py  samplers.py
orangerl/imitation_learning/: bc_agent.py
orangerl/nn/: __init__.py  agent.py  data_util.py
orangerl/nn/action_mappers/: __init__.py  discrete.py  discrete_action_mapper.py  tanh_bound.py
orangerl/nn/imitation_learning/: __init__.py  agent.py  bc_agent.py
orangerl_torch/: __init__.py  agent.py  agent_util.py  critic_util.py  data.py  data_util.py  network_util.py  replay_buffer.py
orangerl_torch/action_mappers/: discrete.py  tanh_bound.py
orangerl_torch/actor_critic/: base.py  sac.py
orangerl_torch/critic_mappers/: direct_mapper.py
orangerl_torch/imitation_learning/: bc_agent.py
orangerl_torch/input_mappers/: mlp_mapper.py
orangerl_torch/network_adaptors/: direct_mapper.py  gru_mapper.py  mlp_mapper.py  rnn_mapper.py
tests_torch/: eval_utils.py  test_sac.py  tests_config.py
